--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:            Tibor Simon
 description:      Engineering with passion
-disqus_shortname: hpstrtheme
+disqus_shortname: tiborsimon
 reading_time:     false
 words_per_minute: 200
 # Your site's domain goes here (eg: //mmistakes.github.io, http://mademistakes.com, etc)
