--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ owner:
   bio:            "Your bio goes here. It shouldn't be super long but a good two sentences or two should suffice."
   email:          you@email.com
   # Social networking links used in footer. Update and remove as you like.
-  twitter:        https://twitter.com/stibi15
+  twitter:        stibi15
   facebook:       
-  github:         https://github.com/tiborsimon
+  github:         tiborsimon
   stackexchange:  
   linkedin:       
   instagram:      
