--- a/_config.yml
+++ b/_config.yml
@@ -57,6 +57,7 @@ kramdown:
   entity_output: as_char
   toc_levels: 1..6
   use_coderay: true
+  input: GFM
 
   coderay:
     coderay_line_numbers: table
