About page update

--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ url: http://tiborsimon.github.io
 owner:
   name:           Tibor Simon
   avatar:         core/tibor_bw.png
-  bio:            "Your bio goes here. It shouldn't be super long but a good two sentences or two should suffice."
-  email:          you@email.com
+  bio:            "Tibor is an electrical engineer from Hungary. He is passionate about creating products that are useful to others."
+  email:          tibor@tibor-simon.com
   # Social networking links used in footer. Update and remove as you like.
   twitter:        stibi15
   facebook:       
