--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ url: http://tiborsimon.github.io
 owner:
   name:           Tibor Simon
   avatar:         core/tibor_bw.png
-  bio:            "Tibor is an electrical engineer from Hungary. He is passionate about creating products that are useful to others."
+  bio:            "Tibor is an electrical engineer from Hungary. He is passionate about creating systems and products that are useful for others."
   email:          tibor@tibor-simon.com
   # Social networking links used in footer. Update and remove as you like.
   twitter:        stibi15
