--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:            Tibor Simon
 description:      Engineering with passion
 disqus_shortname: tiborsimon
-reading_time:     false
+reading_time:     true
 words_per_minute: 200
 # Your site's domain goes here (eg: //mmistakes.github.io, http://mademistakes.com, etc)
 # When testing locally leave blank or use http://localhost:4000
