--- a/_data/social.yml
+++ b/_data/social.yml
@@ -2,13 +2,13 @@
 facebook: true
 twitter: true
 googleplus: true
-linkedin: false
+linkedin: true
 reddit: true
 hackernews: true
-pinterest: false
-tumblr: false
+pinterest: true
+tumblr: true
 pocket: true
-email: false
+email: true
 
 # Disqus
 disqus_shortname: 'example'
