Social sharing improved

--- a/_data/social.yml
+++ b/_data/social.yml
@@ -4,7 +4,7 @@ twitter: true
 googleplus: true
 linkedin: true
 reddit: true
-hackernews: true
+hackernews: false
 pinterest: true
 tumblr: true
 pocket: true
