--- a/_config.yml
+++ b/_config.yml
@@ -15,24 +15,24 @@ owner:
   email:          tibor@tibor-simon.com
   # Social networking links used in footer. Update and remove as you like.
   twitter:        stibi15
-  facebook:       
+  facebook:
   github:         tiborsimon
-  stackexchange:  
-  linkedin:       
-  instagram:      
-  flickr:         
-  tumblr:         
+  stackexchange:
+  linkedin:
+  instagram:
+  flickr:
+  tumblr:
   # google plus id, include the '+', eg +mmistakes
-  google_plus:    
+  google_plus:
 
 # Background image to be tiled on all pages
-background: core/middle-noise.png
+# background: core/middle-noise.png
 
 # Analytics and webmaster tools stuff goes here
 google_analytics: UA-28507373-1
-google_verify:      
+google_verify:
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
-bing_verify:         
+bing_verify:
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    Europe/Budapest
